project details update

--- a/index.html
+++ b/index.html
@@ -423,10 +423,12 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/e_shop.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>E-Shop</h4>
-                  <p>An e-commerce website where users can explore products, view offers, and make purchases.</p>
+                  <h4>ShopHub</h4>
+                  <p>ShopHub is a Laravel-based e-commerce shopping cart application using Laravel’s starter kit and built-in authentication. 
+                    Users can browse products, manage a personalized cart, update quantities, and remove items. 
+                    All cart data is securely stored and linked to authenticated users in the database, demonstrating real-world e-commerce and backend development practices</p>
                   <a href="assets/img/portfolio/e_shop.jpg" title="E-Shop" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://ecom.otitheeshopnet.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://ecom.monojogot.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
