--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                   <h4>Shop Management System</h4>
                   <p>A comprehensive shop management system with employee, inventory, POS, asset, document, reporting, and accounts management.</p>
                   <a href="assets/img/portfolio/shop_management.jpg" title="Shop Management System" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://otitheeshopnet.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="#" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -424,9 +424,7 @@
                 <img src="assets/img/portfolio/e_shop.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>ShopHub</h4>
-                  <p>ShopHub is a Laravel-based e-commerce shopping cart application using Laravel’s starter kit and built-in authentication. 
-                    Users can browse products, manage a personalized cart, update quantities, and remove items. 
-                    All cart data is securely stored and linked to authenticated users in the database, demonstrating real-world e-commerce and backend development practices</p>
+                  <p>ShopHub – Laravel e-commerce app with secure user carts, product browsing, and order management.</p>
                   <a href="assets/img/portfolio/e_shop.jpg" title="E-Shop" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://ecom.monojogot.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
@@ -464,7 +462,7 @@
                   <h4>Otithee FusionERP</h4>
                   <p>Production and manufacturing ERP Solution</p>
                   <a href="assets/img/portfolio/fusion_erp.jpg" title="Otithee FusionERP" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://fusionerp.otitheeshopnet.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="#" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -476,7 +474,7 @@
                   <h4>Otithee Pharma</h4>
                   <p>Pharmacy Shop Management System</p>
                   <a href="assets/img/portfolio/pharma.jpg" title="Otithee Pharma" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://otitheepharma.otitheeshopnet.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="#" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
