--- a/index.html
+++ b/index.html
@@ -395,6 +395,19 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-laravel">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/dokaner_hishab.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Dokaner Hishab</h4>
+                  <p>Dokaner Hishab – SaaS-based inventory and sales management app with online/offline sync and business reporting.</p>
+                  <a href="assets/img/portfolio/dokaner_hishab.jpg" title="Smart Bin" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://dokanerhishab.com/" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-laravel">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/smart_bin.jpg" class="img-fluid" alt="">
